--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "next-site",
+  "name": "bass4nation.github.io",
   "version": "0.1.0",
-  "homepage": "https://github.com/Bass4Nation/bass4nation.github.io/tree/main/next-site",
   "private": true,
   "scripts": {
-    "predeploy": "npm next build",
-    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
-    "axios": "^1.3.5",
-    "cors": "^2.8.5",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "16.1.6",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@types/node": "^18.16.1",
-    "@types/react": "^18.2.0",
-    "gh-pages": "^4.0.0",
-    "typescript": "^5.0.4"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.6",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
